styles/Home.module.css
.container {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100vh;
  padding: 0 0.5rem;
}

.main {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex: 1;
  justify-content: center;
  padding: 5rem 0;
}

.title {
  font-size: 4rem;
  line-height: 1.15;
  margin: 0;
  text-align: center;
}

.footer {
  align-items: center;
  border-top: 1px solid #eaeaea;
  display: flex;
  height: 60px;
  justify-content: center;
}

